# hsyslog

./: .gitignore  .monotonerc  .todo  .travis.yml  README  README.md  Setup.lhs  Syslog.hsc  doctest.hs  hsyslog.cabal  makefile  prologue.txt  syslog.cabal
System/Posix/: Syslog.hsc
c-bits/: make-log-mask.c  simple-syslog.c
example/: Main.hs
src/System/Posix/: Syslog.hs  Syslog.hsc
src/System/Posix/Syslog/: Facility.hsc  Functions.hs  LogMask.hs  Options.hsc  Priority.hsc
test/: Main.hs
